--- a/passwordCreator.html
+++ b/passwordCreator.html
@@ -5,7 +5,44 @@
 </head>
 
 <body>
-<p>page where passwords will be created</p>
+<h1>Password Creator</h1>
+<form>
+    <div class="form-group">
+        <label for="InputWebsite">Website URL</label>
+        <input type="url" class="form-control" id="InputWebsite" placeholder="Enter Website URL">
+    </div>
+    <div class="form-group">
+        <label for="InputPassword">Password</label>
+        <input type="password" class="form-control" id="InputPassword" placeholder="Enter Password">
+    </div>
+    <button>Save</button>
+    <p>Auto Generate Password</p>
+    <div class="form-group">
+        <label for="InputLength">Password Length</label>
+        <input type="number" class="form-control" id="InputWebsite"
+    </div>
+    <div class="form-group">
+        <label for="InputSpecial">Special Characters</label>
+        <input type="number" class="form-control" id="InputSpecial">
+    </div>
+    <div class="form-group">
+        <label for="InputNumber">Numbers</label>
+        <input type="number" class="form-control" id="InputNumber">
+    </div>
+    <div class="form-group">
+        <label for="InputUppercase">Uppercase Letters</label>
+        <input type="number" class="form-control" id="InputUppercase">
+    </div>
+    <div class="form-group">
+        <label for="InputLowercase">Lowercase Letters</label>
+        <input type="number" class="form-control" id="InputLowercase">
+    </div>
+    <div class="Auto-Gen-Buttons">
+        <button>Random Password</button>
+        <button>Four Digit Pin</button>
+        <button>Memorable Password</button>
+    </div>
+</form>
 </body>
 
 </html>
