--- a/startPage.html
+++ b/startPage.html
@@ -7,7 +7,7 @@
 <body>
 <h1><b>Welcome To Password Saver!</h1>
 
-<button onclick="window.location.href = 'passwordCreator.html';">Add New Password</button>
-<button onclick="window.location.href = 'passwordStore.html';">Show Passwords</button>
+<button onclick="window.location.href = '/create_password';">Add New Password</button>
+<button onclick="window.location.href = '/show_passwords';">Show Passwords</button>
 </body>
 </html>
